WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304678
Fix layering violation in WebCore's PathUtilities.h
https://bugs.webkit.org/show_bug.cgi?id=304678
Summary
Fix layering violation in WebCore's PathUtilities.h
Sam Weinig
Reported
2025-12-24 09:30:16 PST
Fix layering violation in WebCore's PathUtilities.h by moving PathUtilities::pathWithShrinkWrappedRectsForOutline(...) to live on OutlinePainter, and factoring necessary utilities into a FloatPointGraph file.
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2025-12-24 09:52:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55854
EWS
Comment 2
2025-12-25 11:20:36 PST
Committed
304937@main
(b1557d139977): <
https://commits.webkit.org/304937@main
> Reviewed commits have been landed. Closing PR #55854 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-25 11:21:11 PST
<
rdar://problem/167179881
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug